--- a/exercice2/exercise_2.ipynb
+++ b/exercice2/exercise_2.ipynb
@@ -73,7 +73,7 @@
     "\n",
     "Now that we have a random graph, we can perform a matching on it using different algorithms. The goal is to find a matching of large size. The larger the size of the matching, the better it is.\n",
     "\n",
-    "### First methode: greedy algorithm\n",
+    "### First method: greedy algorithm\n",
     "\n",
     "The most straightforward approach is to use a greedy algorithm. This algorithm iterates through each edge of the graph and adds it the list of matchings if the nodes haven't been already visited.\n",
     "\n",
@@ -138,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3.2 - Greedy algorithm with random order\n",
+    "### Second method: greedy algorithm with random order\n",
     "\n",
     "The greedy algorithm is not optimal. We can improve it by iterating through the edges in a random order. This way, we can avoid the case where the first edges we iterate through are always the ones tied to the most nodes.\n",
     "\n",
